--- a/albums/ashes-and-echoes/tracks/buck-bandersnatch-song.html
+++ b/albums/ashes-and-echoes/tracks/buck-bandersnatch-song.html
@@ -8,32 +8,39 @@
 
   <!-- JSON-LD for this track -->
   <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "MusicRecording",
-    "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/buck-bandersnatch-song",
-    "name": "The Buck Bandersnatch Song (Playa Dreams)",
-    "byArtist": {
-      "@type": "Person",
-      "@id": "https://music.mycal.net/#mycal"
-    },
-    "inAlbum": {
-      "@type": "MusicAlbum",
-      "@id": "https://music.mycal.net/albums/ashes-and-echoes",
-      "name": "Ashes and Echoes — Songs from the Playa"
-    },
-    "duration": "PT3M14S",
-    "position": 9,
-    "genre": ["Folk", "Electronic", "Burning Man", "Temple Song"],
-    "datePublished": "2025-08-15",
-    "image": "https://music.mycal.net/assets/img/tracks/The-Buck-Bandersnatch-Song.jpg",
-    "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/buck-bandersnatch-song",
-    "description": "\"The Buck Bandersnatch Song (Playa Dreams)\" is a rune-soaked, temple-whisper track about Wunjo, surrender, JuPlaya, and the thin line between ending and beginning. It wanders through runes, tarot, cigarette rituals and desert omens, looking for joy on the other side of the burn.",
-    "lyrics": {
-      "@type": "CreativeWork",
-      "text": "Full lyrics available on this page at https://music.mycal.net/albums/ashes-and-echoes/tracks/buck-bandersnatch-song"
-    }
+{
+  "@context": "https://schema.org",
+  "@type": "MusicRecording",
+  "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/buck-bandersnatch-song",
+  "name": "The Buck Bandersnatch Song (Playa Dreams)",
+  "byArtist": {
+    "@type": "Person",
+    "@id": "https://music.mycal.net/#mycal"
+  },
+  "inAlbum": {
+    "@type": "MusicAlbum",
+    "@id": "https://music.mycal.net/albums/ashes-and-echoes",
+    "name": "Ashes and Echoes — Songs from the Playa"
+  },
+  "duration": "PT3M14S",
+  "position": 9,
+  "genre": ["Folk", "Electronic", "Burning Man", "Temple Song"],
+  "datePublished": "2025-08-15",
+  "image": "https://music.mycal.net/assets/img/tracks/The-Buck-Bandersnatch-Song.jpg",
+  "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/buck-bandersnatch-song.html",
+  "description": "\"The Buck Bandersnatch Song (Playa Dreams)\" is a rune-soaked, temple-whisper track about Wunjo, surrender, JuPlaya, and the thin line between ending and beginning. It follows our hero Buck Bandersnatch, temple builder, fence pounder as he wanders through runes, tarot, cigarette rituals and desert omens, looking for joy on the other side of the burn.",
+  "sameAs": [
+    "https://distrokid.com/hyperfollow/mycal/ashes-and-echoes-songs-from-the-playa-stories-from-fire-and-steel",
+    "https://mycalmusic.bandcamp.com/track/the-buck-bandersnatch-song-playa-dreams",
+    "https://open.spotify.com/track/2muu3pjtREI1Diw86Yf7Ni",
+    "https://music.apple.com/us/song/the-buck-bandersnatch-song-playa-dreams/1830902048",
+    "https://music.amazon.com/albums/B0FL13GHC2?trackAsin=B0FL14CCG2"
+  ],
+  "lyrics": {
+    "@type": "CreativeWork",
+    "text": "(mmm), (yeah),  JOY!\n\nWoke up with a ember on the temple cloth\nNot an i, it was j  and Joy spoke soft\nWUNJO carved in the dust with my hand\nᚹ in the flame, I try to understand\n\nI got no paper, no plan, no pay\nBut I got this dust, and I got this way\nThe Playa knows — and the Playa speaks\nShe draws back the curtain, she kisses my cheek\n(ply-uhhh...)(joy!) (yeah...) (joy!)\n\nJuPlaya, strong reception, man\nDick-cunt glistening, gods in the sand\nRunes fell like thunder, called me \"slave\"\nBut I listened deep and I tried to be brave\n\nThe tarot's a mirror, the rune is the stone\nI fell for a woman who made me go home\nShe called herself Heartsong, and I got clean\nShe found her Leo, and I found my dream\n\n\"Commeth the hour, commeth the man…\"\nI burned the cash, I broke the plan\nI saw the signs, and I let them in\nI met the storm, I met my kin\n\nThe Playa knows — and the Playa gives\nEverything you are, and everything that lives\nWe build, we break, we burn, we bend\nBut fuck it, my friend, this might be the end\nor the start... (mmm...) (joy!)\n\nINGWAZ on its side, Tiwaz on my chest\nThurisaz on my belly, I gave it my best\nFrozen year cycle, portal at the table\nFire shouts random, if you're willing and able\n\nSnakes and moonlight, cigarettes and screams\nMario Kart countdown in ritual dreams\nHad to have a sit, let the stone speak clear\nIt said: \"Joy lives in surrender, my dear\"\n\nSo maybe I'm dying, or maybe I'm free\nMaybe I'm nothing — maybe I'm me\nI'll be in sunlight, or I'll be in shade\nBut I'll be on Playa…where legends are made\n\n501 more to go, the dust don't lie\nGet your shit together — look to the sky\nThis may be it, or the start of more\nBut the temple's whispering…like it did before…\n\nWUNJO...\nfind your joy again..\nLet go..."
   }
+}
   </script>
 </head>
 <body>
