--- a/albums/ashes-and-echoes/tracks/burner-girl.html
+++ b/albums/ashes-and-echoes/tracks/burner-girl.html
@@ -7,32 +7,41 @@
 
   <!-- JSON-LD for this track -->
   <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "MusicRecording",
-    "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/burner-girl",
-    "name": "Burner Girl",
-    "byArtist": {
-      "@type": "Person",
-      "@id": "https://music.mycal.net/#mycal"
-    },
-    "inAlbum": {
-      "@type": "MusicAlbum",
-      "@id": "https://music.mycal.net/albums/ashes-and-echoes",
-      "name": "Ashes and Echoes — Songs from the Playa"
-    },
-    "duration": "PT4M",
-    "position": 3,
-    "genre": ["Folk", "Electronic", "Burning Man", "Love Song"],
-    "datePublished": "2025-08-15",
-    "image": "https://music.mycal.net/assets/img/tracks/Burner-Girl.jpg",
-    "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/burner-girl",
-    "description": "\"Burner Girl\" is a desert crush anthem — a neon-lit love song about finding your orbit around a wild, glowing soul on the Playa. It rides the line between EDM camp banger and starry-eyed romance, all dust, lasers, basslines and heartbeats in sync.",
-    "lyrics": {
-      "@type": "CreativeWork",
-      "text": "Full lyrics available on this page at https://music.mycal.net/albums/ashes-and-echoes/tracks/burner-girl"
-    }
+{
+  "@context": "https://schema.org",
+  "@type": "MusicRecording",
+  "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/burner-girl",
+  "name": "Burner Girl",
+  "byArtist": {
+    "@type": "Person",
+    "@id": "https://music.mycal.net/#mycal"
+  },
+  "inAlbum": {
+    "@type": "MusicAlbum",
+    "@id": "https://music.mycal.net/albums/ashes-and-echoes",
+    "name": "Ashes and Echoes — Songs from the Playa"
+  },
+  "duration": "PT4M",
+  "position": 3,
+  "genre": ["Folk", "Electronic", "Burning Man", "Love Song"],
+  "datePublished": "2025-08-15",
+  "image": "https://music.mycal.net/assets/img/tracks/Burner-Girl.jpg",
+  "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/burner-girl.html",
+  "description": "\"Burner Girl\" is a desert crush anthem about that girl — the soul of the burn. You meet her and you know you're home. It's a neon-lit love song that rides the line between EDM camp banger and starry-eyed romance: art cars rolling by, lasers, basslines, dust storms, and heartbeats synced like they were meant to meet there all along.",
+  "sameAs": [
+    "https://distrokid.com/hyperfollow/mycal/ashes-and-echoes-songs-from-the-playa-stories-from-fire-and-steel",
+    "https://mycalmusic.bandcamp.com/track/burner-girl",
+    "https://music.amazon.com/albums/B0FL13GHC2?trackAsin=B0FL16LFZ1",
+    "https://open.spotify.com/track/5g7tZ0XcaQEcVumztXEhBN",
+    "https://music.apple.com/us/song/burner-girl/1830902041",
+    "https://www.pandora.com/artist/mycal/ashes-and-echoes-songs-from-the-playa-stories-from-fire-and-steel/burner-girl/TRkxgrxqKnZ92fm",
+    "https://www.youtube.com/watch?v=VOtl59npW-Y"
+  ],
+  "lyrics": {
+    "@type": "CreativeWork",
+    "text": "rolling through the gate after 12 hours of traffic\nfinally setup camp, grab my trusty steed and head out\nto deep Playa, as the day empties out I see...\n\nBURNER GIRL!\n\n(Ayy! Whoa-oh! Whoa-oh!)\n\nOut in the desert, the sun's dipping low,\nDust swirls around, but she steals the glow.\nDraped in the wild, she's untamed and free,\nA spark in the haze, she's beckoning me.\nPulses ignite with the night's desert call,\nLost on the Playa, I'm drawn where she's from.\nShe dances in shadows, a neon-lit gleam,\nA soul of the burn, my radical dream.\n\nThe baseline drops, and the night ignites,\nShe's glowing wild under laser lights.\nI'm caught in her orbit, can't break away,\nBurner Girl's got me, I'm here to stay.\n\nBurner Girl, light me up, set me free,\nDancing through the dust, you're my revelry.\nBurner Girl, take my hand, lead the way,\nIn this desert dream, forever we'll play.\n(Ooh-oh-oh) Burner Girl, you're the flame,\n(Ooh-oh-oh) Burning bright, no shame,\n(Ooh-oh-oh) Spin me round, yell my name,\nBurner Girl, Burner Girl, ignite the FLAME!\n\nShe's got a smile like the sunrise glow,\nA rebel with wings where the wild winds blow.\nArt cars are rolling, the beat's in my chest,\nShe pulls me closer, I'm lost in her quest.\nTents in the madness, stars burn above,\nHer voice in the chaos, it's all she said:\n\"Live for the moment, let's ride the flame,\"\nBurner Girl's spark won't be Contained.\n\nThe baseline drops, and the night ignites,\nShe's glowing wild under laser lights.\nI'm caught in her orbit, can't break away,\nBurner Girl's got me, I'm here to stay.\n\nBurner Girl, spark the night, set me free,\nDust and fire, you're my fantasy\nBurner Girl, take my hand, lead me there,\nIn this desert dream, we're lost in the air.\n(Ooh-oh-oh) Burner Girl, you ignite,\n(Ooh-oh-oh) Burning bright, no shame,\n(Ooh-oh-oh) Spin me round, yell my name,\nBurner Girl, Burner Girl, light the FLAME!\n\nThe fire's alive, the crowd's in a trance,\nShe pulls me in with a single glance.\nHeartbeat to heartbeat, we're synced to the sound,\nIn this dusty wonderland, love's what we found.\nOh, the night's eternal, the stars never fade,\nBurner Girl, with you, I'm never afraid!\n(Ayy! Whoa-oh!)\n\nOut in the desert, where the wild hearts run,\nBurner Girl, you're my rising sun.\nHeartbeat to heartbeat, we're synced to the sound,\nIn this dusty wonderland, love's what we found.\n(ayoow!)\n\nBURNER GIRL, take my hand (Ayy!)\n\nBURNER GIRL, lead the way (Whoa-oh!)\n\nBURNER GIRL, set me free, (Ayy! )\n\nマイカル.... Call me home\n\n(Whoa)\nマイカル.... Call me home"
   }
+}
   </script>
 </head>
 <body>
