--- a/albums/ashes-and-echoes/tracks/dust-to-dust.html
+++ b/albums/ashes-and-echoes/tracks/dust-to-dust.html
@@ -11,6 +11,46 @@
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="manifest" href="/site.webmanifest">
   <link rel="stylesheet" href="/assets/css/style.css">
+
+ <script type="application/ld+json">
+ {
+  "@context": "https://schema.org",
+  "@type": "MusicRecording",
+  "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/dust-to-dust",
+  "name": "Dust to Dust (The Playa Sucks)",
+  "duration": "PT3M51S",
+  "position": 7,
+  "inLanguage": "en",
+  "byArtist": {
+    "@type": "Person",
+    "@id": "https://music.mycal.net/#mycal"
+  },
+  "inAlbum": {
+    "@type": "MusicAlbum",
+    "@id": "https://music.mycal.net/albums/ashes-and-echoes",
+    "name": "Ashes and Echoes — Songs from the Playa"
+  },
+  "genre": ["Folk", "Electronic", "Burning Man", "Satire"],
+  "datePublished": "2025-08-15",
+  "image": "https://music.mycal.net/assets/img/tracks/dust-to-dust.jpg",
+  "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/dust-to-dust.html",
+  "description": "\"Dust to Dust (The Playa Sucks)\" is a sharp-edged roast of influencer culture, plug-and-play camps, and wellness-washed decadence on the Playa. It's part love letter, part intervention, calling out the carbon scams, VIP tents, and rich-kid junk while still ending with the classic burner mantra: it was better last year.",
+  "sameAs": [
+    "https://distrokid.com/hyperfollow/mycal/ashes-and-echoes-songs-from-the-playa-stories-from-fire-and-steel",
+    "https://mycalmusic.bandcamp.com/track/dust-to-dust-the-playa-sucks",
+    "https://www.pandora.com/artist/mycal/ashes-and-echoes-songs-from-the-playa-stories-from-fire-and-steel/dust-to-dust-the-playa-sucks/TRwgng9z34Z6K74",
+    "https://music.amazon.com/albums/B0FL13GHC2?trackAsin=B0FL16M33L",
+    "https://open.spotify.com/track/5C4klRt9KqvGqCd4LHPi23",
+    "https://www.youtube.com/watch?v=qAbiVeJWqPM",
+    "https://music.apple.com/us/song/dust-to-dust-the-playa-sucks/1830902046"
+  ],
+  "lyrics": {
+    "@type": "CreativeWork",
+    "text": "Welcome to Black Rock City.\nPopulation: 70,000 egos and one giant match. (yaaaah!)\n\nThey came for the 'Gram, left their brains at home,\nBombshell bras on a dust-swept roam.\nLatex boots in apocalypse heat,\nWorshipping tech bros for a VIP seat.\nChokers tight, and pupils wide,\nThey sparkle hard with no soul inside.\nSniffin' GHB in the LED stew,\nSnappin' pics with the Mayan Warrior crew. (yaaaah!)\n\nThis ain't the desert dream you say it is,\nIt's a rich kid cleanse and a startup biz.\nWe're choking on dust and irony,\nWhile you "find yourself" in luxury.\nBurning Man, you carbon scam,\nJust a wellness retreat with an Instagram.\nIt's a thousand-dollar porta-loo trust fall —\nAnd bro, it sucks for the rest of us all. (pshh!)\n\nNo bikes, no clue, no water in hand,\nJust bear-guy-n dropouts lost in the sand.\n"Wo ist die techno?" they shout at the sky,\nBut Function ain't comin' — don't ask why.\nShazam is banned, their shame is real,\nThey only respect that German feel.\nPassed out cold near Robo Heart,\nWhining that Berlin had better art. (yaaaah!)\n\nThey flew in on jets with organic fear,\nSippin' dust martinis while chanting "we're here."\nRVs parked like mobile ver-sigh,\nBoasting how "nothing" feels so high.\nFiji showers and vibe butlers near,\nWearing Moon Boots worth a fiscal year.\n"This is raw," they say with a grin,\nFrom behind designer oxygen. (ugh!)\n\n"Don't talk to me unless your art car's LEED-certified."\n"I only gift crypto vibes."\n"That's not dust, it's ancestral data."\n"My emotional support drone has solar panels."\n"This dust is micro dosing me."\n"You can't manifest without a cactus enema."\n"That's not a tent — it's a decompression pod."\n"I saw Elon. He said my aura was scalable."\n\nIn '96 it was dust and fire,\nNow it's influences building a brand empire.\nRusted wagons, Reno plates,\nCursing virgins at the gate.\nThey hate your lights, they hate your sound,\nThey miss when weirdos ran the town.\n"Songs need guitars!" they yell mid-spliff,\nThen flick you off with a tribal glyph. (yaaaah!)\n\nThis ain't the primal scream you claim it be,\nIt's Coachella with worse hygiene. (ugh!)\nYou're bonding through dust and LED,\nWhile flexing your tent on NBC.\nBurning Man, you Fyre Fest clone,\nWith a thousand influencers moaning "I'm home."\nIt's a TED Talk wrapped in tribal funk —\nJust call it what it is: rich kid junk. (pshh!)\n\nThey were summoned by the moons of Mars,\nWith hemp-seed beats and healing scars.\nBathing in vibes, skipping the soap,\nMicrodosing and hugging hope.\nThey call it "dusting a nut" out here,\nWhile smearing coconut oil on each ear.\nPreachin' about plastic's sin —\nThen snortin' ket off a port-a-john bin.\n\nHeard the rumor in a rave in neese,\nBought one ticket, no release.\nShowed up lost, no food, no plan,\nDreams of Jamie XX in a dusty van.\nCroissant in hand, burnt to hell,\nChain-smoked cigs with a patchouli smell.\n"Zis is Burning Man?" they ask, confused,\nAs their hopes slowly bruised. (yaaaah!)\n\nPack it in! Pack it out!\nBut you forgot your Eurotrash doubt!\nGoggles on! Morals gone!\nSeven days, your brain is pawned!\nRadical what?! Radical where?!\nYou burned a man — now you don't care! (ugh!)\n\nSo gather round the flame,\nLet's burn away the shame.\nYou came for truth and left with swag,\nYou found your soul… and lost your bag.\nDust to dust, and hype to hype —\nYou came for the burn, but didn't expect the bite.\n\nIt was better last year.\nIt'll be worse next year.\nSee you in the dust.\n(yaaaah!)\nMy Cal Out!"
+  }
+}
+  </script>
+
 </head>
 <body>
   <header>
@@ -169,37 +209,6 @@ My Cal Out!
     </div>
   </footer>
 
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "MusicRecording",
-    "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/dust-to-dust",
-    "name": "Dust to Dust (The Playa Sucks)",
-    "duration": "PT3M51S",
-    "position": 7,
-    "inLanguage": "en",
-    "byArtist": {
-      "@type": "Person",
-      "@id": "https://music.mycal.net/#mycal"
-    },
-    "inAlbum": {
-      "@type": "MusicAlbum",
-      "@id": "https://music.mycal.net/albums/ashes-and-echoes",
-      "name": "Ashes and Echoes — Songs from the Playa"
-    },
-    "genre": ["Folk", "Electronic", "Burning Man", "Satire"],
-    "datePublished": "2025-08-15",
-    "image": "https://music.mycal.net/assets/img/tracks/dust-to-dust.jpg",
-    "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/dust-to-dust",
-    "description": "\"Dust to Dust (The Playa Sucks)\" is a sharp-edged roast of influencer culture, plug-and-play camps, and wellness-washed decadence on the Playa. It’s part love letter, part intervention, calling out the carbon scams, VIP tents, and rich-kid junk while still ending with the classic burner mantra: it was better last year.",
-    "sameAs": [
-      "https://distrokid.com/hyperfollow/mycal/ashes-and-echoes-songs-from-the-playa-stories-from-fire-and-steel"
-    ],
-    "lyrics": {
-      "@type": "CreativeWork",
-      "text": "Welcome to Black Rock City.\nPopulation: 70,000 egos and one giant match. (yaaaah!)\n\nThey came for the ’Gram, left their brains at home,\nBombshell bras on a dust-swept roam.\nLatex boots in apocalypse heat,\nWorshipping tech bros for a VIP seat.\nChokers tight, and pupils wide,\nThey sparkle hard with no soul inside.\nSniffin’ GHB in the LED stew,\nSnappin’ pics with the Mayan Warrior crew. (yaaaah!)\n\nThis ain't the desert dream you say it is,\nIt's a rich kid cleanse and a startup biz.\nWe’re choking on dust and irony,\nWhile you “find yourself” in luxury.\nBurning Man, you carbon scam,\nJust a wellness retreat with an Instagram.\nIt’s a thousand-dollar porta-loo trust fall —\nAnd bro, it sucks for the rest of us all. (pshh!)\n\nNo bikes, no clue, no water in hand,\nJust bear-guy-n dropouts lost in the sand.\n“Wo ist die techno?” they shout at the sky,\nBut Function ain’t comin’ — don’t ask why.\nShazam is banned, their shame is real,\nThey only respect that German feel.\nPassed out cold near Robo Heart,\nWhining that Berlin had better art. (yaaaah!)\n\nThey flew in on jets with organic fear,\nSippin’ dust martinis while chanting “we’re here.”\nRVs parked like mobile ver-sigh,\nBoasting how “nothing” feels so high.\nFiji showers and vibe butlers near,\nWearing Moon Boots worth a fiscal year.\n“This is raw,” they say with a grin,\nFrom behind designer oxygen. (ugh!)\n\n“Don’t talk to me unless your art car’s LEED-certified.”\n“I only gift crypto vibes.”\n“That’s not dust, it’s ancestral data.”\n“My emotional support drone has solar panels.”\n“This dust is micro dosing me.”\n“You can’t manifest without a cactus enema.”\n“That’s not a tent — it’s a decompression pod.”\n“I saw Elon. He said my aura was scalable.”\n\nIn ‘96 it was dust and fire,\nNow it’s influences building a brand empire.\nRusted wagons, Reno plates,\nCursing virgins at the gate.\nThey hate your lights, they hate your sound,\nThey miss when weirdos ran the town.\n“Songs need guitars!” they yell mid-spliff,\nThen flick you off with a tribal glyph. (yaaaah!)\n\nThis ain’t the primal scream you claim it be,\nIt's Coachella with worse hygiene. (ugh!)\nYou’re bonding through dust and LED,\nWhile flexing your tent on NBC.\nBurning Man, you Fyre Fest clone,\nWith a thousand influencers moaning “I'm home.”\nIt’s a TED Talk wrapped in tribal funk —\nJust call it what it is: rich kid junk. (pshh!)\n\nThey were summoned by the moons of Mars,\nWith hemp-seed beats and healing scars.\nBathing in vibes, skipping the soap,\nMicrodosing and hugging hope.\nThey call it “dusting a nut” out here,\nWhile smearing coconut oil on each ear.\nPreachin’ about plastic’s sin —\nThen snortin’ ket off a port-a-john bin.\n\nHeard the rumor in a rave in neese,\nBought one ticket, no release.\nShowed up lost, no food, no plan,\nDreams of Jamie XX in a dusty van.\nCroissant in hand, burnt to hell,\nChain-smoked cigs with a patchouli smell.\n“Zis is Burning Man?” they ask, confused,\nAs their hopes slowly bruised. (yaaaah!)\n\nPack it in! Pack it out!\nBut you forgot your Eurotrash doubt!\nGoggles on! Morals gone!\nSeven days, your brain is pawned!\nRadical what?! Radical where?!\nYou burned a man — now you don’t care! (ugh!)\n\nSo gather round the flame,\nLet’s burn away the shame.\nYou came for truth and left with swag,\nYou found your soul… and lost your bag.\nDust to dust, and hype to hype —\nYou came for the burn, but didn’t expect the bite.\n\nIt was better last year.\nIt’ll be worse next year.\nSee you in the dust.\n(yaaaah!)\nMy Cal Out!"
-    }
-  }
-  </script>
+ 
 </body>
 </html>
