--- a/albums/ashes-and-echoes/tracks/i-was-meant-to-burn.html
+++ b/albums/ashes-and-echoes/tracks/i-was-meant-to-burn.html
@@ -11,6 +11,46 @@
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="manifest" href="/site.webmanifest">
   <link rel="stylesheet" href="/assets/css/style.css">
+
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "MusicRecording",
+  "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/i-was-meant-to-burn",
+  "name": "I Was Meant to Burn",
+  "duration": "PT3M45S",
+  "inLanguage": "en",
+  "byArtist": {
+    "@type": "Person",
+    "@id": "https://music.mycal.net/#mycal"
+  },
+  "inAlbum": {
+    "@type": "MusicAlbum",
+    "@id": "https://music.mycal.net/albums/ashes-and-echoes",
+    "name": "Ashes and Echoes — Songs from the Playa"
+  },
+  "genre": ["Folk", "Electronic", "Burning Man"],
+  "datePublished": "2025-08-15",
+  "image": "https://music.mycal.net/assets/img/tracks/i-was-ment-2-burn.jpg",
+  "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/i-was-meant-to-burn.html",
+  "sameAs": [
+    "https://distrokid.com/hyperfollow/mycal/ashes-and-echoes-songs-from-the-playa-stories-from-fire-and-steel",
+    "https://music.youtube.com/watch?v=haF_dHX4tTY",
+    "https://open.spotify.com/track/1xsVIEkUOj13rmZI77Uu45",
+    "https://music.apple.com/us/song/i-was-meant-to-burn/1830902040",
+    "https://music.amazon.com/albums/B0FL13GHC2?trackAsin=B0FL15F91M",
+    "https://www.pandora.com/artist/mycal/ashes-and-echoes-songs-from-the-playa-stories-from-fire-and-steel/i-was-meant-to-burn/TRKbq6KZkJwqVVw",
+    "https://mycalmusic.bandcamp.com/track/i-was-meant-to-burn"
+  ],
+  "description": "\"I Was Meant to Burn\" is a steel-and-fire mantra about surrendering to transformation in the desert. It circles the image of the Man and the Temple as both sacrifice and release — a loop of destruction, rebuilding, and the quiet realization that some part of you was always destined for the flame.",
+  "position": 2,
+  "lyrics": {
+    "@type": "CreativeWork",
+    "text": "Lost in the desert, Lost My mind,\nSteel and fire covering my crime\n\nReared in Steel burn it hot burn it down burn it now\nReared in Steel burn it hot I need to burn it now\n\nraised in fire and steel, raised to burn it all\nraised in fire and steel, raised to build it all\nraised in fire and steel, raised to burn it all down\nburn it all down\nburn it all down\n\nburn the man\nburn the temple\nburn it all down\n\nfire in the desert, steel in my heart\nfire in the desert, steel in my heart\nfire and steel, fire and steel everywhere\n\nburn the man\nburn the temple\nburn it all down\nburn the man\nburn the temple\nburn it all down\n\nlost in the desert, i see a fire in the distance,\nI know I was meant to burn\n\nburn the man\nburn the temple\nburn it all down\nburn it all down\n\nburn it all down\n\nburn the man\nburn the temple\nburn it all down\nburn the man\nburn the temple\nburn it all down\n\nlost in the desert, i see a fire in the distance,\nI know I was meant to burn\n\nburn the man\nburn the temple\nburn it all down\nburn the man\nburn the temple\nburn it all down\n\nLost in the desert, Lost My mind,\nSteel and fire covering my crime\n\nburn the man\nburn the temple\nburn it all down\ndowwn\nburn the man\nburn the temple\nburn it all doooowwn\n\nlost in the desert, i see a fire in the distance,\nI know I was meant to burn\n\nburn the man\nburn the temple\nburn it all down\nburn the man\nburn the temple\nburn it all down"
+  }
+}
+  </script>
+
 </head>
 <body>
   <header>
@@ -138,36 +178,6 @@ burn it all down
     </div>
   </footer>
 
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "MusicRecording",
-    "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/i-was-meant-to-burn",
-    "name": "I was Meant to Burn",
-    "duration": "PT3M45S",
-    "inLanguage": "en",
-    "byArtist": {
-      "@type": "Person",
-      "@id": "https://music.mycal.net/#mycal"
-    },
-    "inAlbum": {
-      "@type": "MusicAlbum",
-      "@id": "https://music.mycal.net/albums/ashes-and-echoes"
-    },
-    "genre": ["Folk", "Electronic", "Burning Man"],
-    "datePublished": "2025-08-15",
-    "image": "https://music.mycal.net/assets/img/tracks/i-was-ment-2-burn.jpg",
-    "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/i-was-meant-to-burn",
-    "sameAs": [
-      "https://distrokid.com/hyperfollow/mycal/ashes-and-echoes-songs-from-the-playa-stories-from-fire-and-steel"
-    ],
-    "description": "\"I was Meant to Burn\" is a steel-and-fire mantra about surrendering to transformation in the desert. It circles the image of the Man and the Temple as both sacrifice and release — a loop of destruction, rebuilding, and the quiet realization that some part of you was always destined for the flame.",
-    "position": 2,
-    "lyrics": {
-      "@type": "CreativeWork",
-      "text": "Lost in the desert, Lost My mind,\nSteel and fire covering my crime\n\nReared in Steel burn it hot burn it down burn it now\nReared in Steel burn it hot I need to burn it now\n\nraised in fire and steel, raised to burn it all\nraised in fire and steel, raised to build it all \nraised in fire and steel, raised to burn it all down\nburn it all down\nburn it all down\n\nburn the man \nburn the temple\nburn it all down\n\nfire in the desert, steel in my heart\nfire in the desert, steel in my heart\nfire and steel, fire and steel everywhere\n\nburn the man \nburn the temple\nburn it all down\nburn the man \nburn the temple\nburn it all down\n\nlost in the desert, i see a fire in the distance,\nI know I was meant to burn\n\nburn the man \nburn the temple\nburn it all down\nburn it all down\n\nburn it all down\n\nburn the man \nburn the temple\nburn it all down\nburn the man \nburn the temple\nburn it all down\n\nlost in the desert, i see a fire in the distance,\nI know I was meant to burn\n\nburn the man \nburn the temple\nburn it all down\nburn the man \nburn the temple\nburn it all down\n\nLost in the desert, Lost My mind,\nSteel and fire covering my crime\n\nburn the man \nburn the temple\nburn it all down\ndowwn\nburn the man \nburn the temple\nburn it all doooowwn\n\nlost in the desert, i see a fire in the distance,\nI know I was meant to burn\n\nburn the man \nburn the temple\nburn it all down\nburn the man \nburn the temple\nburn it all down"
-    }
-  }
-  </script>
+
 </body>
 </html>
