--- a/albums/ashes-and-echoes/tracks/overheard-at-burning-man.html
+++ b/albums/ashes-and-echoes/tracks/overheard-at-burning-man.html
@@ -11,6 +11,38 @@
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="manifest" href="/site.webmanifest">
   <link rel="stylesheet" href="/assets/css/style.css">
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "MusicRecording",
+  "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/overheard-at-burning-man",
+  "name": "Overheard at Burning Man",
+  "duration": "PT6M44S",
+  "position": 11,
+  "inLanguage": "en",
+  "byArtist": {
+    "@type": "Person",
+    "@id": "https://music.mycal.net/#mycal"
+  },
+  "inAlbum": {
+    "@type": "MusicAlbum",
+    "@id": "https://music.mycal.net/albums/ashes-and-echoes",
+    "name": "Ashes and Echoes — Songs from the Playa"
+  },
+  "genre": ["Spoken Word", "Electronic", "Burning Man"],
+  "datePublished": "2025-08-15",
+  "image": "https://music.mycal.net/assets/img/tracks/overheard-at-burningman.jpg",
+  "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/overheard-at-burning-man.html",
+  "sameAs": [
+    "https://distrokid.com/hyperfollow/mycal/ashes-and-echoes-songs-from-the-playa-stories-from-fire-and-steel"
+  ],
+  "description": "\"Overheard at Burning Man\" is a spoken-word walk through Black Rock City's subconscious — DPW one-liners, techno snob mantras, medic tent confessions, influencer absurdities, and temple whispers stitched into one long dust-soaked eavesdrop.",
+  "lyrics": {
+    "@type": "CreativeWork",
+    "text": "Walk with me.\nPast the blinking bikes, the glowing towers, the fire-belching dragon.\nOpen your ears.\nThis is what the dust says—\nwhen no one knows they're being heard.\n\n\"It ain't the dust — it's the amateurs that'll kill you.\"\n\"You don't join DPW. You survive it.\"\n\"No one's in charge. Everyone's in denial.\"\n\"If it ain't on fire, it ain't our problem.\"\n\"DPW. No gods. No bosses. Just tools.\"\n\nAll hail The Builders:\nThey arrive when the desert still sleeps.\nThey drag steel from silence, wrench shade from sky.\nRusted saints in Carhartt robes.\nCalloused hands, sharp tongues.\nTheir gospel? Get it done.\n\nThe Sonic Shamans don't DJ — they summon.\n\"This BPM is off by two and I can feel it.\"\n\"This isn't a DJ set — it's a frequency exorcism.\"\n\"Bassline therapy is in session.\"\n\"Don't touch the mixer. Touch the moment.\"\n\"This track is goodbye.\"\n\nArt Car DJs bring the party to you — whether you're ready or not.\nThey ride dragons with speakers for teeth.\nLooping spells in one twenty eight Beats Per Minute.\nYou don't dance to the beat—\nYou surrender to it.\n\n\"Influencer Ponies, Radical self-expression — optimized for engagement.\"\n\"Do I look radically inclusive in this filter?\"\n\"Wait, pose again—my aura was blinking.\"\n\"I found myself… in my comment section.\"\n\"Radical self-expression… but curated.\"\n\"This outfit has more philosophy than fabric.\"\n\nSparkle Kids, Radical self-expression, plus accidental magic.\nThey shimmer like mirages.\nFiltered saints in mirror visors.\nSearching for signal in a sea of dust.\nBroadcasting beauty, pixel by pixel.\n\nTech Bros, Seeking enlightenment with backend scale a BILL it tee.\n\"I merged with the vibe mainframe.\"\n\"You're not broke — you're energetically blocked.\"\n\"I coded my own enlightenment.\"\n\"Blockchain meets chakras, bro.\"\n\"This start up is spiritual.\"\n\nThey pitch apps from hammocks.\nThey charge crystals and seed funding.\nHustling transcendence, version 3 point oh\n\nWelcome to the Medic Tent, It's not a clinic. It's a confessional.\n\"I came in for a blister, stayed for an existential unraveling.\"\n\"The IV drip gave me electrolytes and forgiveness.\"\n\"The medic held my hand like they'd done it before—lifetimes ago.\"\n\"I thought it was sunstroke. It was soul-stroke.\"\n\"This isn't a triage tent. It's a forgiveness chamber.\"\n\"They gave me gauze for the wound — and silence for the rest.\"\n\"I walked in broken. I walked out burning.\"\n\nTemple and the Healing\nSome wounds are made of memory.\nSome burns are chosen.\nThe Playa doesn't judge your broken parts—\nIt dances with them.\nAnd then, it lets them go.\n\nI have a Confession\n\"I saluted the effigy. Then I danced with ghosts.\"\n\"We rode the Shark Car into our own subconscious.\"\n\"I align my chakras with the bassline.\"\n\"I saw god—and they DJ sunrise sets.\"\n\"This isn't over — it's a beginning\"\n\"You came here to meet yourself — dusty and divine.\"\n\nThe wind carries voices.\nSome make sense.\nSome make art.\nSome just leave traces you can't explain\n\nSo listen…\nNot just with your ears—\nBut with whatever's left of your soul\nafter the burn."
+  }
+}
+  </script>
 </head>
 <body>
   <header>
@@ -154,35 +186,5 @@ after the burn.
       </div>
     </div>
   </footer>
-
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "MusicRecording",
-    "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/overheard-at-burning-man",
-    "name": "Overheard at Burning Man",
-    "duration": "PT6M44S",
-    "position": 11,
-    "inLanguage": "en",
-    "byArtist": {
-      "@type": "Person",
-      "@id": "https://music.mycal.net/#mycal"
-    },
-    "inAlbum": {
-      "@type": "MusicAlbum",
-      "@id": "https://music.mycal.net/albums/ashes-and-echoes",
-      "name": "Ashes and Echoes — Songs from the Playa"
-    },
-    "genre": ["Spoken Word", "Electronic", "Burning Man"],
-    "datePublished": "2025-08-15",
-    "image": "https://music.mycal.net/assets/img/tracks/overheard-at-burningman.jpg",
-    "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/overheard-at-burning-man",
-    "description": "\"Overheard at Burning Man\" is a spoken-word walk through Black Rock City’s subconscious — DPW one-liners, techno snob mantras, medic tent confessions, influencer absurdities, and temple whispers stitched into one long dust-soaked eavesdrop.",
-    "lyrics": {
-      "@type": "CreativeWork",
-      "text": "Full lyrics available on this page at https://music.mycal.net/albums/ashes-and-echoes/tracks/overheard-at-burning-man"
-    }
-  }
-  </script>
 </body>
 </html>
