--- a/albums/ashes-and-echoes/tracks/petaluma-chicken-scratch.html
+++ b/albums/ashes-and-echoes/tracks/petaluma-chicken-scratch.html
@@ -7,32 +7,41 @@
 
   <!-- JSON-LD for this track -->
   <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "MusicRecording",
-    "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/petaluma-chicken-scratch",
-    "name": "Petaluma Chicken Scratch",
-    "byArtist": {
-      "@type": "Person",
-      "@id": "https://music.mycal.net/#mycal"
-    },
-    "inAlbum": {
-      "@type": "MusicAlbum",
-      "@id": "https://music.mycal.net/albums/ashes-and-echoes",
-      "name": "Ashes and Echoes — Songs from the Playa"
-    },
-    "duration": "PT5M49S",
-    "position": 14,
-    "genre": ["Folk", "Roots", "Storytelling", "Petaluma"],
-    "datePublished": "2025-08-15",
-    "image": "https://music.mycal.net/assets/img/tracks/petaluma-chicken-scratch.jpg",
-    "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/petaluma-chicken-scratch",
-    "description": "\"Petaluma Chicken Scratch\" is a hometown legend turned into song — a backyard strain, a Burning Man gift cycle, and a community myth grown from soil, sun, and shared stories.",
-    "lyrics": {
-      "@type": "CreativeWork",
-      "text": "Full lyrics available on this page at https://music.mycal.net/albums/ashes-and-echoes/tracks/petaluma-chicken-scratch"
-    }
+{
+  "@context": "https://schema.org",
+  "@type": "MusicRecording",
+  "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/petaluma-chicken-scratch",
+  "name": "Petaluma Chicken Scratch",
+  "byArtist": {
+    "@type": "Person",
+    "@id": "https://music.mycal.net/#mycal"
+  },
+  "inAlbum": {
+    "@type": "MusicAlbum",
+    "@id": "https://music.mycal.net/albums/ashes-and-echoes",
+    "name": "Ashes and Echoes — Songs from the Playa"
+  },
+  "duration": "PT5M49S",
+  "position": 14,
+  "genre": ["Folk", "Roots", "Storytelling", "Petaluma"],
+  "datePublished": "2025-08-15",
+  "image": "https://music.mycal.net/assets/img/tracks/petaluma-chicken-scratch.jpg",
+  "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/petaluma-chicken-scratch.html",
+  "description": "\"Petaluma Chicken Scratch\" is a hometown legend documenting the multi-generation breeding journey from Girl Scout Cookie clones and a Guava male through Chili-G Cookie to the final Snicker Doodle cross. Born in backyard gardens, powered by chicken-coop compost, and shared through Burning Man's gift economy, it's a celebration of pheno hunting, local pride, and keeping strain stories alive through starts passed hand to hand.",
+    "sameAs": [
+    "https://distrokid.com/hyperfollow/mycal/ashes-and-echoes-songs-from-the-playa-stories-from-fire-and-steel",
+    "https://archive.mycal.net/pcs/",
+    "https://mycalmusic.bandcamp.com/track/petaluma-chicken-scratch",
+    "https://music.apple.com/us/song/petaluma-chicken-scratch-bonus-track/1830902054",
+    "https://www.youtube.com/watch?v=lQ8mBuzs9KE",
+    "https://www.pandora.com/artist/mycal/ashes-and-echoes-songs-from-the-playa-stories-from-fire-and-steel/petaluma-chicken-scratch-bonus-track/TRdZXZ2X3ZJKdX4",
+    "https://music.amazon.com/albums/B0FL13GHC2?marketplaceId=ATVPDKIKX0DER&trackAsin=B0FL14KKGZ"
+  ],
+  "lyrics": {
+    "@type": "CreativeWork",
+    "text": "🐔 Petaluma Chicken Scratch: A Local Legend 🌱❤️\n\nIt started out with a cookie clone,\nGuava wind and garden stone.\nBrother-in-law with a backyard plan,\nDirt on our hands, and a sunburn tan.\nSeeds took root and the flavors bloomed,\nGuava Cookie in a smokey room.\nNext year came with a chili kick,\nClearlake fire made the cross stick.\n\nScratch that ground, Petaluma pride,\nSativa dreams on a compost ride.\nStarts in hand, we pass it back,\nBorn from soil and a chicken shack.\nOh, Petaluma Chicken Scratch —\nThe legend grows, you can't match that!\nThe legend grows, you can't match that!\n\nBurning Man crew said, \"Turn it up!\"\nSnicker Doodle made the flowers erupt.\nWe fed the beds with coop-born gold,\nThe buds got loud, the highs got bold.\nFour pounds deep from just six green,\nStill the folks lined up, sight unseen.\nNot for sale, this gift we grow,\nEach new start makes the story glow.\n\nScratch that ground, Petaluma pride,\nSativa dreams on a compost ride.\nStarts in hand, we pass it back,\nBorn from soil and a chicken shack.\nOh, Petaluma Chicken Scratch —\nThe legend grows, you can't match that!\n\nIf you get a male, don't throw it away,\nPair it right, let the garden play.\nSave the seeds, keep the flame,\nWrite your chapter in the strain's name.\n\nScratch that ground, make your mark,\nPetaluma nights and backyard spark.\nStart to seed, pass it on,\nIn our town, this legend's strong.\nThe roots run deep, and the vibe's intact!\nThe roots run deep, and the vibe's intact!\n\nBurning Man crew said, \"Turn it up!\"\nSnicker Doodle made the flowers erupt.\nWe fed the beds with coop-born gold,\nThe buds got loud, the highs got bold.\nFour pounds deep from just six green,\nStill the folks lined up, sight unseen.\nNot for sale, this gift we grow,\nEach new start makes the story glow.\n\nIf you get a male, don't throw it away,\nPair it right, let the garden play.\nSave the seeds, keep the flame,\nWrite your chapter in the strain's name."
   }
+}
   </script>
 </head>
 <body>
