--- a/albums/ashes-and-echoes/tracks/sparkle-pony.html
+++ b/albums/ashes-and-echoes/tracks/sparkle-pony.html
@@ -7,32 +7,40 @@
 
   <!-- JSON-LD for this track -->
   <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "MusicRecording",
-    "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/sparkle-pony",
-    "name": "Sparkle Pony",
-    "byArtist": {
-      "@type": "Person",
-      "@id": "https://music.mycal.net/#mycal"
-    },
-    "inAlbum": {
-      "@type": "MusicAlbum",
-      "@id": "https://music.mycal.net/albums/ashes-and-echoes",
-      "name": "Ashes and Echoes — Songs from the Playa"
-    },
-    "duration": "PT3M8S",
-    "position": 8,
-    "genre": ["Folk", "Electronic", "Burning Man", "Satire"],
-    "datePublished": "2025-08-15",
-    "image": "https://music.mycal.net/assets/img/tracks/sparkel-pony.jpg",
-    "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/sparkle-pony",
-    "description": "\"Sparkle Pony\" is a glitter-bomb character study told from the Sparkle Pony’s own POV — chopper drop-offs, billionaire art-car backdrops, designer oxygen, and 24-hour clout cycles. It’s a playful, biting riff on the most extra kind of Playa tourist.",
-    "lyrics": {
-      "@type": "CreativeWork",
-      "text": "Full lyrics available on this page at https://music.mycal.net/albums/ashes-and-echoes/tracks/sparkle-pony"
-    }
+{
+  "@context": "https://schema.org",
+  "@type": "MusicRecording",
+  "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/sparkle-pony",
+  "name": "Sparkle Pony",
+  "byArtist": {
+    "@type": "Person",
+    "@id": "https://music.mycal.net/#mycal"
+  },
+  "inAlbum": {
+    "@type": "MusicAlbum",
+    "@id": "https://music.mycal.net/albums/ashes-and-echoes",
+    "name": "Ashes and Echoes — Songs from the Playa"
+  },
+  "duration": "PT3M8S",
+  "position": 8,
+  "genre": ["Folk", "Electronic", "Burning Man", "Satire"],
+  "datePublished": "2025-08-15",
+  "image": "https://music.mycal.net/assets/img/tracks/sparkel-pony.jpg",
+  "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/sparkle-pony.html",
+  "description": "\"Sparkle Pony\" is a glitter-bomb character study told from the Sparkle Pony's own POV — chopper drop-offs, billionaire art-car backdrops, designer oxygen, and 24-hour clout cycles. It's a playful, biting riff on the most extra kind of Playa tourist.",
+  "sameAs": [
+    "https://distrokid.com/hyperfollow/mycal/ashes-and-echoes-songs-from-the-playa-stories-from-fire-and-steel"
+    "https://music.apple.com/us/song/sparkle-pony/1830902047",
+    "https://open.spotify.com/track/3vyfGuSEbACkO3g4atjUIU",
+    "https://www.pandora.com/artist/mycal/ashes-and-echoes-songs-from-the-playa-stories-from-fire-and-steel/sparkle-pony/TRjcgXt326bn44V",
+    "https://music.amazon.com/albums/B0FL13GHC2?trackAsin=B0FL14NGY7",
+    "https://www.youtube.com/watch?v=_t2XCtCG4D4"
+  ],
+  "lyrics": {
+    "@type": "CreativeWork",
+    "text": "Whop-whop-whop, I'm here to slay...\n\nChopper drops me, hear the hum,\nPlaya's red carpet, here I come.\nDressed in shine, no dust on me,\nSelfie throne's my destiny.\nBillionaires can't look away,\nArt cars frame my big display.\nSnap that shot, I'm here to slay,\nSparkle Pony's born today!\n\nI'm the Sparkle Pony, watch me glow,\nPlaya's my runway, steal the show.\nFlash my grin for Insta's crown,\nBurning Man's my playground now!\n\n(Ooh-oh-oh) Sparkle Pony, queen supreme,\n(Ooh-oh-oh) Glitter reigns, my perfect dream,\n(Ooh-oh-oh) Strut and shine, then I'm gone,\nSparkle Pony, rule the dawn!\n\nNeon glow's my spotlight beam,\nBillionaires chase my scene.\n\"Move aside—fuck your burn!\" I yell,\nPlaya's mine, can't you tell?\nFilters pop, my vibe's the best,\nDust's for losers, I'm the quest.\nTwenty-four, then jet off high,\nSparkle Pony owns the sky!\n\nI'm the Sparkle Pony, watch me glow,\nPlaya's my runway, steal the show.\nFlash that grin for selfie clout,\nBurning Man's my spotlight shout!\n\nCrowd's in awe, I've set the trend,\nGlitter's gold, my reign won't end.\nPlaya bows beneath my feet,\nSparkle Pony can't be beat!\nJet revs up, I'm out in style,\nBurning Man's my victory mile!\n\nI'm the Sparkle Pony, watch me glow,\nPlaya my runway, steal the show.\nFlash that grin for likes galore,\nBurning Man's my glitter war!\n\n(Ooh-oh-oh) Sparkle Pony, queen supreme,\n(Ooh-oh-oh) Glitter reigns, my perfect dream,\n(Ooh-oh-oh) Strut and jet, I'm outta sight,\nSparkle Pony, burn so bright!\n\n(Ooh-oh-oh) Sparkle Pony, queen supreme,\n(Ooh-oh-oh) Glitter reigns, my perfect dream,\n(Ooh-oh-oh) Strut and jet, I'm outta sight,\nSparkle Pony, burn so bright!"
   }
+}
   </script>
 </head>
 <body>
