--- a/albums/ashes-and-echoes/tracks/speak-burner-to-me.html
+++ b/albums/ashes-and-echoes/tracks/speak-burner-to-me.html
@@ -11,6 +11,47 @@
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="manifest" href="/site.webmanifest">
   <link rel="stylesheet" href="/assets/css/style.css">
+
+  <script type="application/ld+json">
+  {
+{
+  "@context": "https://schema.org",
+  "@type": "MusicRecording",
+  "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/speak-burner-to-me",
+  "name": "Speak Burner to Me",
+  "duration": "PT3M43S",
+  "inLanguage": "en",
+  "byArtist": {
+    "@type": "Person",
+    "@id": "https://music.mycal.net/#mycal"
+  },
+  "inAlbum": {
+    "@type": "MusicAlbum",
+    "@id": "https://music.mycal.net/albums/ashes-and-echoes",
+    "name": "Ashes and Echoes — Songs from the Playa"
+  },
+  "position": 5,
+  "genre": ["Folk", "Electronic", "Burning Man", "Glossary Song"],
+  "datePublished": "2025-08-15",
+  "image": "https://music.mycal.net/assets/img/tracks/speak-burner-2-me.jpg",
+  "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/speak-burner-to-me.html",
+  "sameAs": [
+    "https://distrokid.com/hyperfollow/mycal/ashes-and-echoes-songs-from-the-playa-stories-from-fire-and-steel",
+    "https://mycalmusic.bandcamp.com/track/speak-burner-to-me",
+    "https://music.amazon.com/albums/B0FL13GHC2?trackAsin=B0FL15W17Z",
+    "https://youtu.be/LRavX-l8hLI?si=8Z4vXrz64kaNObGB",
+    "https://open.spotify.com/track/0tRGqnmPtSbbXPiKS0h4BN?si=f0919c8b1fce4e9a",
+    "https://music.apple.com/us/song/speak-burner-to-me/1830902044",
+    "https://www.pandora.com/artist/mycal/ashes-and-echoes-songs-from-the-playa-stories-from-fire-and-steel/speak-burner-to-me/TRKzjrfjcPv34VV"
+  ],
+  "description": "\"Speak Burner to Me\" is a fast-talking Playa glossary in song form — a call-and-response tour through MOOP, Darkwads, Theme Camps, Arctica, DPW, and all the weird acronyms and in-jokes that make Black Rock City feel like another language. If you know, you know.",
+  "lyrics": {
+    "@type": "CreativeWork",
+    "text": "Playya… yeah\nNo, not playya — it's Playa (say it right)\nYou ready?\nLet's go…\n\nWelcome to Home, it's That Thing in the Desert\nYou're a Burr-gin no more once you roll in the dust\nGrab your ticket, greet the Greeter, ring the bell, shed your name\nGet a Playa one instead — now you're in the game\nWe don't do the 'Default World' — no commerce, no shame\nJust dust, art, fire, and a Temple in flames\nFrom 10 to 2, from thunder to flashy\nThis ain't no festival, it's full-on batshit classy\n\nSpeak Burner to me — define your tribe\nSay \"MOOP\" not \"trash,\" let the sparkle slide\nSpeak Burner to me — in dust we trust\nFrom Arctica ice to the Temple dust\nSay \"radical,\" say \"now,\" say \"Free\"\nIf you know, you know — speak Burner to me\n(yeah… whoooa…)\n\nIt's Civic with Consent, and Decom with feels\nIt's Line Walks, Leave No Trace, bacon meals on wheels\nIt's Mutant Vehicles cruisin' loud in the night\nFrom Robo Heart drops to a dust bike flight\nLamplighters glowin', the Fluffers bring booze\nJava Cow says \"cream or sugar?\" — you choose\nShirtcockers struttin', Sparkle Ponies pout\nIf your camp's got a fence, then your vibe's sold out\n\nWhat's MOOP? (Matter Out Of Place!)\nWhat's a Darkwad? (Unlit in your face!)\nWho's a Wook? (Begs and bakes and mooches)\nWhat's a Solifuge? (Fast with too many leggy scooches)\nWhat's Piss Clear? (Hydrate 'til you pee!)\nWhat's TTITD? (That Thing in the D!)\nWho's the Man? (Not the cops, the one we burn!)\nWhat's a Theme Camp? (Where weirdos take their turn!)\n\nBRC's got Avenues, from 2 to 10\nStreets from A to L — but no straight lines, friend\nArctica slings ice at 3, 6, and 9\nDPW builds it all, then drinks it all in time\nRangers roam gently, BMIR calls storms\nThe DMZ pounds bass while the Man transforms\nThe Fallopian Tubes lead us in like a womb\nBut Exodus gonna trap you, bring snacks, resume\n\nSpeak Burner to me — throw dust like slang\nRadical Inclusion in a no-pants gang\nSpeak Burner to me — ten principles high\nWith a pants cannon ready and glitter in your eye\nSay \"Flame Effect,\" say \"Foe-moe,\" say \"Free\"\nWelcome Home, mycal — now speak Burner to me \n(yeah! yaaaah!)\n\nBORG! BLM! MOOP it up, then do it again\nEL Wire glow, Esplanade show\nMutant Vehicle rides in a giant rhino whoa\nRV Fortress? That's a no\nSCUM of the Earth? Plug-and-Play bro\nCollexodus, Rebar, P&P\nWhite-Out storm? You can't see me!\nReality Bends, Sparkle Lens\nMuggles don't get it — but this never ends\n\n\nSo if someone asks you where you've been...\nJust whisper, \"The Playa.\"\nAnd if they don't get it...\nSpeak burner to them."
+  }
+}
+  </script>
+
 </head>
 <body>
   <header>
@@ -136,38 +177,5 @@ Speak burner to them.
       </div>
     </div>
   </footer>
-
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "MusicRecording",
-    "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/speak-burner-to-me",
-    "name": "Speak Burner to Me",
-    "duration": "PT3M43S",
-    "inLanguage": "en",
-    "byArtist": {
-      "@type": "Person",
-      "@id": "https://music.mycal.net/#mycal"
-    },
-    "inAlbum": {
-      "@type": "MusicAlbum",
-      "@id": "https://music.mycal.net/albums/ashes-and-echoes",
-      "name": "Ashes and Echoes — Songs from the Playa"
-    },
-    "position": 5,
-    "genre": ["Folk", "Electronic", "Burning Man", "Glossary Song"],
-    "datePublished": "2025-08-15",
-    "image": "https://music.mycal.net/assets/img/tracks/speak-burner-2-me.jpg",
-    "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/speak-burner-to-me",
-    "sameAs": [
-      "https://distrokid.com/hyperfollow/mycal/ashes-and-echoes-songs-from-the-playa-stories-from-fire-and-steel"
-    ],
-    "description": "\"Speak Burner to Me\" is a fast-talking Playa glossary in song form — a call-and-response tour through MOOP, Darkwads, Theme Camps, Arctica, DPW, and all the weird acronyms and in-jokes that make Black Rock City feel like another language. If you know, you know.",
-    "lyrics": {
-      "@type": "CreativeWork",
-      "text": "Playya… yeah\nNo, not playya — it’s Playa (say it right)\nYou ready?\nLet’s go…\n\nWelcome to Home, it’s That Thing in the Desert\nYou’re a Burr-gin no more once you roll in the dust\nGrab your ticket, greet the Greeter, ring the bell, shed your name\nGet a Playa one instead — now you’re in the game\nWe don’t do the ‘Default World’ — no commerce, no shame\nJust dust, art, fire, and a Temple in flames\nFrom 10 to 2, from thunder to flashy\nThis ain’t no festival, it’s full-on batshit classy\n\nSpeak Burner to me — define your tribe\nSay \"MOOP\" not \"trash,\" let the sparkle slide\nSpeak Burner to me — in dust we trust\nFrom Arctica ice to the Temple dust\nSay \"radical,\" say \"now,\" say \"Free\"\nIf you know, you know — speak Burner to me\n(yeah… whoooa…)\n\nIt’s Civic with Consent, and Decom with feels\nIt’s Line Walks, Leave No Trace, bacon meals on wheels\nIt’s Mutant Vehicles cruisin’ loud in the night\nFrom Robo Heart drops to a dust bike flight\nLamplighters glowin’, the Fluffers bring booze\nJava Cow says \"cream or sugar?\" — you choose\nShirtcockers struttin’, Sparkle Ponies pout\nIf your camp’s got a fence, then your vibe’s sold out\n\nWhat’s MOOP? (Matter Out Of Place!)\nWhat’s a Darkwad? (Unlit in your face!)\nWho’s a Wook? (Begs and bakes and mooches)\nWhat’s a Solifuge? (Fast with too many leggy scooches)\nWhat’s Piss Clear? (Hydrate ‘til you pee!)\nWhat’s TTITD? (That Thing in the D!)\nWho’s the Man? (Not the cops, the one we burn!)\nWhat’s a Theme Camp? (Where weirdos take their turn!)\n\nBRC’s got Avenues, from 2 to 10\nStreets from A to L — but no straight lines, friend\nArctica slings ice at 3, 6, and 9\nDPW builds it all, then drinks it all in time\nRangers roam gently, BMIR calls storms\nThe DMZ pounds bass while the Man transforms\nThe Fallopian Tubes lead us in like a womb\nBut Exodus gonna trap you, bring snacks, resume\n\nSpeak Burner to me — throw dust like slang\nRadical Inclusion in a no-pants gang\nSpeak Burner to me — ten principles high\nWith a pants cannon ready and glitter in your eye\nSay \"Flame Effect,\" say \"Foe-moe,\" say \"Free\"\nWelcome Home, mycal — now speak Burner to me \n(yeah! yaaaah!)\n\nBORG! BLM! MOOP it up, then do it again\nEL Wire glow, Esplanade show\nMutant Vehicle rides in a giant rhino whoa\nRV Fortress? That’s a no\nSCUM of the Earth? Plug-and-Play bro\nCollexodus, Rebar, P&amp;P\nWhite-Out storm? You can't see me!\nReality Bends, Sparkle Lens\nMuggles don’t get it — but this never ends\n\n\nSo if someone asks you where you’ve been...\nJust whisper, “The Playa.”\nAnd if they don’t get it...\nSpeak burner to them."
-    }
-  }
-  </script>
 </body>
 </html>
