--- a/albums/ashes-and-echoes/tracks/ten-principles-one-heart.html
+++ b/albums/ashes-and-echoes/tracks/ten-principles-one-heart.html
@@ -11,6 +11,46 @@
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="manifest" href="/site.webmanifest">
   <link rel="stylesheet" href="/assets/css/style.css">
+
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "MusicRecording",
+  "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/ten-principles-one-heart",
+  "name": "Ten Principles, One Heart",
+  "duration": "PT2M59S",
+  "inLanguage": "en",
+  "byArtist": {
+    "@type": "Person",
+    "@id": "https://music.mycal.net/#mycal"
+  },
+  "inAlbum": {
+    "@type": "MusicAlbum",
+    "@id": "https://music.mycal.net/albums/ashes-and-echoes",
+    "name": "Ashes and Echoes — Songs from the Playa"
+  },
+  "position": 4,
+  "genre": ["Folk", "Electronic", "Burning Man", "Anthem"],
+  "datePublished": "2025-08-15",
+  "image": "https://music.mycal.net/assets/img/tracks/ten-principles-one-heart.jpg",
+  "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/ten-principles-one-heart.html",
+  "sameAs": [
+    "https://distrokid.com/hyperfollow/mycal/ashes-and-echoes-songs-from-the-playa-stories-from-fire-and-steel",
+    "https://www.youtube.com/watch?v=2wyjT4VCPDs",
+    "https://mycalmusic.bandcamp.com/track/ten-principles-one-heart",
+    "https://music.apple.com/us/song/ten-principles-one-heart/1830902042",
+    "https://open.spotify.com/track/73SBjoC75q3RNpbovhh1GH",
+    "https://music.amazon.com/albums/B0FL13GHC2?trackAsin=B0FL15W9ZP",
+    "https://www.pandora.com/artist/mycal/ashes-and-echoes-songs-from-the-playa-stories-from-fire-and-steel/10-principles-1-heart/TRp46bJg4zrfvPk"
+  ],
+  "description": "\"Ten Principles, One Heart\" is the Playa pledge in song form — a sing-along camp anthem that runs the Burning Man principles through dust, bass, and radical love. It's part reminder, part rallying cry: from radical inclusion to leaving no trace, many burners, one heart.",
+  "lyrics": {
+    "@type": "CreativeWork",
+    "text": "Rollin' through dust with a backpack of dreams\nPlaya wind howlin' through busted-up seams\nMet a stranger who gave me cold tea and a smile\nSaid \"Welcome home, stay weird for a while\"\nLED bikes like a galaxy spun\nThe party don't end with the rising sun\nEvery step in the sand leaves a spark in your soul\nEvery camp's burning a piece of the whole\n\nTen principles, one heart\nWe glow like sparks in the dark\nWe gift, we build, we play our part\nRadical love, that's our art\nFrom dust to flame, we rise and start\nTen principles, one heart\n(yaaaah!)\n\nRadical welcome wherever you land\nSelf-expression kicks up the sand\n\nNo brands, no deals — just soul and skin\nA gift in your hand, no price, just grin\nDust in your hair, a beat in your soul\nEvery sunrise makes you feel whole\nArt takes flight in a desert dream\nLiving the moment, a vibrant stream\nNo trace left but the stories we tell\nImmediacy's real, a truth you can tell\nCommunal effort, leave ego behind\nConsent and respect — we stay radically kind\n\nLeave your titles, your status, your plan\nBecome the dust, the art, the clan\nOn the edge of the void, we dance and ignite\nBurn the fears, let your joy take flight\nStrip off the masks, let the real you shine\nIn the dust we're all one — no yours, no mine\n(yeahhh!)\nSing it now—\n\nTen principles, one heart (say it loud!)\nGlowin' wild in the dark (shout it proud!)\nWe build, we dance, we share our spark\nRadical dreams leave a mark\nFrom dust to light, we play our part\nTen principles, one heart\n(whoooa!)\nTen principles, one heart\n(ohhh yeah!)\nTen principles, one heart\nTen principles! (One heart!)\n\nBack to the dust, where the heart stays free\nTen principles live in you and me."
+  }
+}
+  </script>
+
 </head>
 <body>
   <header>
@@ -120,37 +160,6 @@ Ten principles live in you and me.
     </div>
   </footer>
 
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "MusicRecording",
-    "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/ten-principles-one-heart",
-    "name": "Ten Principles, One Heart",
-    "duration": "PT2M59S",
-    "inLanguage": "en",
-    "byArtist": {
-      "@type": "Person",
-      "@id": "https://music.mycal.net/#mycal"
-    },
-    "inAlbum": {
-      "@type": "MusicAlbum",
-      "@id": "https://music.mycal.net/albums/ashes-and-echoes",
-      "name": "Ashes and Echoes — Songs from the Playa"
-    },
-    "position": 4,
-    "genre": ["Folk", "Electronic", "Burning Man", "Anthem"],
-    "datePublished": "2025-08-15",
-    "image": "https://music.mycal.net/assets/img/tracks/ten-principles-one-heart.jpg",
-    "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/ten-principles-one-heart",
-    "sameAs": [
-      "https://distrokid.com/hyperfollow/mycal/ashes-and-echoes-songs-from-the-playa-stories-from-fire-and-steel"
-    ],
-    "description": "\"Ten Principles, One Heart\" is the Playa pledge in song form — a sing-along camp anthem that runs the Burning Man principles through dust, bass, and radical love. It’s part reminder, part rallying cry: from radical inclusion to leaving no trace, many burners, one heart.",
-    "lyrics": {
-      "@type": "CreativeWork",
-      "text": "Rollin’ through dust with a backpack of dreams\\nPlaya wind howlin’ through busted-up seams\\nMet a stranger who gave me cold tea and a smile\\nSaid “Welcome home, stay weird for a while”\\nLED bikes like a galaxy spun\\nThe party don’t end with the rising sun\\nEvery step in the sand leaves a spark in your soul\\nEvery camp’s burning a piece of the whole\\n\\nTen principles, one heart \\\nWe glow like sparks in the dark \\\nWe gift, we build, we play our part \\\nRadical love, that's our art \\\nFrom dust to flame, we rise and start \\\nTen principles, one heart \\\n(yaaaah!)\\n\\nRadical welcome wherever you land \\\nSelf-expression kicks up the sand\\n \\\nNo brands, no deals — just soul and skin \\\nA gift in your hand, no price, just grin\\nDust in your hair, a beat in your soul \\\nEvery sunrise makes you feel whole \\\nArt takes flight in a desert dream \\\nLiving the moment, a vibrant stream\\nNo trace left but the stories we tell\\nImmediacy's real, a truth you can tell\\nCommunal effort, leave ego behind\\nConsent and respect — we stay radically kind\\n\\nLeave your titles, your status, your plan \\\nBecome the dust, the art, the clan \\\nOn the edge of the void, we dance and ignite \\\nBurn the fears, let your joy take flight\\nStrip off the masks, let the real you shine \\\nIn the dust we’re all one — no yours, no mine \\\n(yeahhh!) \\\nSing it now—\\n\\nTen principles, one heart (say it loud!) \\\nGlowin’ wild in the dark (shout it proud!) \\\nWe build, we dance, we share our spark \\\nRadical dreams leave a mark \\\nFrom dust to light, we play our part \\\nTen principles, one heart \\\n(whoooa!) \\\nTen principles, one heart \\\n(ohhh yeah!) \\\nTen principles, one heart\\nTen principles! (One heart!)\\n\\nBack to the dust, where the heart stays free \\\nTen principles live in you and me."
-    }
-  }
-  </script>
+
 </body>
 </html>
