--- a/albums/ashes-and-echoes/tracks/weird-steel.html
+++ b/albums/ashes-and-echoes/tracks/weird-steel.html
@@ -7,32 +7,41 @@
 
   <!-- JSON-LD for this track -->
   <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "MusicRecording",
-    "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/weird-steel",
-    "name": "Weird Steel",
-    "byArtist": {
-      "@type": "Person",
-      "@id": "https://music.mycal.net/#mycal"
-    },
-    "inAlbum": {
-      "@type": "MusicAlbum",
-      "@id": "https://music.mycal.net/albums/ashes-and-echoes",
-      "name": "Ashes and Echoes — Songs from the Playa"
-    },
-    "duration": "PT3M42S",
-    "position": 6,
-    "genre": ["Folk", "Electronic", "Burning Man", "Camp Anthem"],
-    "datePublished": "2025-08-15",
-    "image": "https://music.mycal.net/assets/img/tracks/weird-steel.jpg",
-    "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/weird-steel",
-    "description": "\"Weird Steel\" is the Reared in Steel camp anthem — a love letter to Petaluma-forged art, Rhino Redemption, couches in the sky, grilled cheese at sunrise, and the fire-bent crew holding down 9 & A. It’s part roll call, part legend, and all sparks.",
-    "lyrics": {
-      "@type": "CreativeWork",
-      "text": "Full lyrics available on this page at https://music.mycal.net/albums/ashes-and-echoes/tracks/weird-steel"
-    }
+{
+  "@context": "https://schema.org",
+  "@type": "MusicRecording",
+  "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/weird-steel",
+  "name": "Weird Steel",
+  "byArtist": {
+    "@type": "Person",
+    "@id": "https://music.mycal.net/#mycal"
+  },
+  "inAlbum": {
+    "@type": "MusicAlbum",
+    "@id": "https://music.mycal.net/albums/ashes-and-echoes",
+    "name": "Ashes and Echoes — Songs from the Playa"
+  },
+  "duration": "PT3M42S",
+  "position": 6,
+  "genre": ["Folk", "Electronic", "Burning Man", "Camp Anthem"],
+  "datePublished": "2025-08-15",
+  "image": "https://music.mycal.net/assets/img/tracks/weird-steel.jpg",
+  "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/weird-steel.html",
+  "description": "\"Weird Steel\" is the Reared in Steel camp anthem — a love letter to Petaluma-forged art, Rhino Redemption, couches in the sky, grilled cheese at sunrise, and the fire-bent crew holding down 9 & A. It's part roll call, part legend, and all sparks.",
+  "sameAs": [
+    "https://distrokid.com/hyperfollow/mycal/ashes-and-echoes-songs-from-the-playa-stories-from-fire-and-steel",
+    "https://mycalmusic.bandcamp.com/track/weird-steel",
+    "https://music.apple.com/us/song/weird-steel/1830902045",
+    "https://open.spotify.com/track/4JawSUXBiuPGaAJ1o0UG7V",
+    "https://www.pandora.com/artist/mycal/ashes-and-echoes-songs-from-the-playa-stories-from-fire-and-steel/weird-steel/TRprw3jkw2ZxrvP",
+    "https://music.amazon.com/albums/B0FL13GHC2?marketplaceId=ATVPDKIKX0DER&musicTerritory=US&ref=dm_sh_fGwB7DvXjFtZjWjdSjPlb7Em1&trackAsin=B0FL16HJV6",
+    "https://www.youtube.com/watch?v=2wyjT4VCPDs"
+  ],
+  "lyrics": {
+    "@type": "CreativeWork",
+    "text": "This one's forged in Petaluma — born to burn.\nLive from 9 & A — WEIRD STEEL!\n\nWeird Steel forged at 9 & A\nRight on the edge where the fire gods play\nStep through the portal where the weird ones stay\nWe build with flame — we don't play halfway\n\nCouch in the sky, grilled cheese in hand\nCookies at noon, propane unplanned\nCome find us tomorrow — or better, today\nWeird Steel's got the bar and a burner buffet (whoooa!)\n\nWe are Reared in Steel — Petaluma born (yeah!)\nRhino Redemption with a fire-spitting horn (let it rise!)\n(Target's open!) (Flower Tower glows!)\nWe light the night where the fire wind blows (whoooa!)\n\nKevin sparks the sky,\nDave's the fix-it guy\nAndre's got the plan and the best tan alive (yeah!)\nWeird Steel! (Weird Steel!) — let it burn, let it rise\nWeird Steel! (Weird Steel!) — see the dust in our eyes (whoooa!)\n\nWe gave you Medusa, and the Fire Kathedral's flare\nLove Pod Forest, where sparks fill the air\nLadybug rides with a spark and a smile\nHarper's GUMA glows, wrapped in style (fire!)\n\nSlushies and Reiki, cookies on cue\nWeddings, sky rides, and a century too\nFifty feet high — a couch to the stars\nWe don't just party — we build art cars\n\nStrike team's ready, MOOPin' in stride\nRhino's groovin' while the flames fly wide (boom!)\nAdvice on bread, truth on toast (mmm-hmm)\nWe gift it loud — that's what we do most (yeah!)\n\nWe are Reared in Steel — forged in love (yeah!)\nFrom the Petaluma hills to the stars above\nBrass Ring spins, and our stories ignite\nWeird Steel rides through the magic night\n\nWeird Steel! (Weird Steel!) — let it burn, let it rise\nWeird Steel! (Weird Steel!) — we got stars in our eyes (whoooa!)"
   }
+}
   </script>
 </head>
 <body>
