--- a/albums/ashes-and-echoes/tracks/ash-and-echoes.html
+++ b/albums/ashes-and-echoes/tracks/ash-and-echoes.html
@@ -7,32 +7,36 @@
 
   <!-- JSON-LD for this track -->
   <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "MusicRecording",
-    "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/ash-and-echoes",
-    "name": "Ash and Echoes (The Temple Song)",
-    "byArtist": {
-      "@type": "Person",
-      "@id": "https://music.mycal.net/#mycal"
-    },
-    "inAlbum": {
-      "@type": "MusicAlbum",
-      "@id": "https://music.mycal.net/albums/ashes-and-echoes",
-      "name": "Ashes and Echoes — Songs from the Playa"
-    },
-    "duration": "PT3M43S",
-    "position": 10,
-    "genre": ["Folk", "Electronic", "Burning Man", "Temple Song"],
-    "datePublished": "2025-08-15",
-    "image": "https://music.mycal.net/assets/img/tracks/The-Temple-Song.jpg",
-    "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/ash-and-echoes",
-    "description": "\"Ash and Echoes (The Temple Song)\" is a slow, reverent walk through the Temple — names on wood, grief in dust, and the moment when fire turns it all into something lighter. It holds the quiet side of the burn: the place where we leave what we can’t carry home.",
-    "lyrics": {
-      "@type": "CreativeWork",
-      "text": "Full lyrics available on this page at https://music.mycal.net/albums/ashes-and-echoes/tracks/ash-and-echoes"
-    }
+{
+  "@context": "https://schema.org",
+  "@type": "MusicRecording",
+  "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/we-did-start-the-fire",
+  "name": "We Did Start the Fire (Burning Man History Jam)",
+  "duration": "PT6M29S",
+  "inLanguage": "en",
+  "byArtist": {
+    "@type": "Person",
+    "@id": "https://music.mycal.net/#mycal"
+  },
+  "inAlbum": {
+    "@type": "MusicAlbum",
+    "@id": "https://music.mycal.net/albums/ashes-and-echoes",
+    "name": "Ashes and Echoes — Songs from the Playa"
+  },
+  "genre": ["Folk", "Electronic", "Burning Man", "History Jam"],
+  "position": 1,
+  "datePublished": "2025-08-15",
+  "image": "https://music.mycal.net/assets/img/tracks/start-a-fire-image.jpg",
+  "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/we-did-start-the-fire.html",
+  "description": ""We Did Start the Fire (Burning Man History Jam)" is a rhythmic ritual, a timeline-in-flames, and a campfire chant for the dust-born. Tracing Burning Man's evolution from a rope on Baker Beach to towering temples and art cars in the void, the song weaves names, myths, and moments into a lyrical memory loop — part oral history, part glitch-folk gospel, and a wink to the firestarter in all of us.",
+  "sameAs": [
+    "https://distrokid.com/hyperfollow/mycal/ashes-and-echoes-songs-from-the-playa-stories-from-fire-and-steel"
+  ],
+  "lyrics": {
+    "@type": "CreativeWork",
+    "text": "\"Before the apps… before the wristbands…\nbefore the permits and the sparkle Ponies…\nthere was Baker Beach… a bonfire… a rope…\nand an idea passed between friends.\"\n(beat)\n\"That idea found dust… and space…\nand the Playa gave it room to grow.\"\n\nBaker Beach, Zone Trip Four Cacophony kicks the door,\nHarvey, James and TAZ, black suits, jazz and desert daze.\nDanger Ranger, Peter Pan, code 007 man,\nMarian's Seventy-Eight Olds, Larry's dream, the story unfolds. , (humming \"mmm-hmm\")\nChristmas Camp, Turbo Ted, Stagger Sisters, raver heads,\nGoa Gil, John Law's Doghead show,\n3-Day Stubble, let it go!\nPull the rope, raise the Man,\nNothing was yet pre-planned,\nTrash fence, lamps lit, Center Camp misfits\n\nWe did start the fire!\nLit it on the Playa, and it's getting higher!\nWe did start the fire!\nRangers on patrol now, never gonna tire.\n\nPapa Satan, Hellco crew, Techno Ghetto breaks right through,\nRegulations rolling in, John Law's departure begins.\nHualapai and Fly Ranch, LNT in every branch,\nRod Garrett draws the plan, theme camps sprawl across the land.\nPier to Pier, Temple Flux, Mantfarm, mutant art trucks,\nBliss Dance, Rites of Passage, Trojan Horse, DPW's wreckage.\nTV Free and Big Rig's roar,\nJiffy Lube and camel corps,\nSpace Whale, Light House, drones, drones, drones!\nAaron's hat and shattered bones.\n(Woooohhh)\n\nWe did start the fire!\nOn the open Playa, glowing in the wire.\nWe did start the fire!\nEven when it's gone, the myth keeps burning higher.\n\nRangers in the dust at dawn,\nCode Double Oh then he's gone.\nExploding Man in '98,\nEviction seals a dusty fate.\nMowers parked out in the void,\nAbsurdity we all enjoyed.\nSergey camps, BLM heat, DPW won't face defeat,\nArt cars, stilt stars, Aaron's clock and hexed guitars.\nWhite Ocean, Catacombs,\nBank of Un-America loans,\nChurch Trap's got no grace,\nTemple's fire lights your face.\nRobots walk, Nixon's law,\nHexatron draws the awe.\nTenner bikes, burner rites,\nWelcome home on desert nights.\nNo minivan, no glam parade,\nJust boot prints where the dream was made. (aaaaya)\nWe did start the fire!\nBurned it all to ashes, made a spire higher.\nWe did start the fire!\nNow we're dust and legends, riding out the wire.\n\"They say we leave no trace.\nBut look closer…\nThere's footprints under the dust.\nSignals in the static.\nAnd echoes from a campfire…\nthat burned before the map had names\n\"Mycal, You just had to be there.\"\n\nWe did start the fire!\nOn the open Playa, glowing in the wire.\nWe did start the fire!\nEven when it's gone, the myth keeps burning higher.\n\nRangers in the dust at dawn,\nCode 007 — then he's gone.\nExploding Man in '98,\nEviction seals a dusty fate.\nMowers parked out in the void,\nAbsurdity we all enjoyed.\nSergey camps, BLM heat, DPW won't face defeat,\nArt cars, stilt stars, Aaron's clock and hexed guitars.\nWhite Ocean, Catacombs,\nBank of Un-America loans,\nChurch Trap's got no grace,\nTemple's fire lights your face.\nRobots walk, Nixon's law,\nHexatron draws the awe.\nTenner bikes, burner rites,\nWelcome home on desert nights.\nNo minivan, no glam parade,\nJust boot prints where the dream was made. We did start the fire!\nBurned it all to ashes, made a spire higher.\nWe did start the fire!\nNow we're dust and legends, riding out the wire.\n\"They say we leave no trace.\nBut look closer…\nThere's footprints under the dust.\nSignals in the static.\nAnd echoes from a campfire…\nthat burned before the map had names"
   }
+}
   </script>
 </head>
 <body>
